feat: solotest